Demo cleanup for OBS overlay mode.

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                         <a class="btn btn-outline-light" href="/kissingbooth/">Kiss</a>
                         <a class="btn btn-outline-light" href="/sequence/">Sequence</a>
                         <a class="btn btn-outline-light" href="/baby/">Baby</a>
-                        <a class="btn btn-outline-light" href="/warp/">Warp</a>
-                        <a class="btn btn-outline-light" href="/pixel/">Pixel</a>
-
+                        <a class="btn btn-outline-light" href="/paint/">Paint</a>
+                        <!-- <a class="btn btn-outline-light" href="/warp/">Warp</a>
+                        <a class="btn btn-outline-light" href="/pixel/">Pixel</a> -->
                     </div>
                 </div>
 
