--- a/markers/index.html
+++ b/markers/index.html
@@ -16,8 +16,8 @@
         body {
             margin: 0;
             padding: 0;
-            background: #2b3990;
-            background: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
+            background-color: #2b3990;
+            background-color: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
             overflow: hidden;
         }
 
