--- a/paint/index.html
+++ b/paint/index.html
@@ -8,6 +8,17 @@
     <title>Document</title>
 
     <style>
+        body,
+        html {
+            height: 100%;
+        }
+
+        body {
+            background-color: #2b3990;
+            background-color: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
+            overflow: hidden;
+        }
+
         #main {
             position: fixed;
             top: 0;
@@ -15,9 +26,6 @@
             right: 0;
             bottom: 0;
             user-select: none;
-
-            background: url('textures/map.svg') no-repeat center center fixed;
-            background-size: cover;
         }
     </style>
 
