--- a/baby/index.html
+++ b/baby/index.html
@@ -15,8 +15,8 @@
         }
 
         body {
-            background: #2b3990;
-            background: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
+            background-color: #2b3990;
+            background-color: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
             overflow: hidden;
         }
 
