--- a/kissingbooth/index.html
+++ b/kissingbooth/index.html
@@ -13,8 +13,8 @@
         }
 
         body {
-            background: #2b3990;
-            background: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
+            background-color: #2b3990;
+            background-color: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
             overflow: hidden;
         }
 
