Added custom CSS when not in OBS.

--- a/baby/index.html
+++ b/baby/index.html
@@ -15,9 +15,15 @@
         }
 
         body {
-            background-color: #2b3990;
-            background-color: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
+            background-color: rgba(0, 0, 0, 0);
             overflow: hidden;
+            margin: 0;
+            padding: 0;
+        }
+
+        body.demo {
+            background: #2b3990;
+            background: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
         }
 
         #main {
