--- a/markers/index.html
+++ b/markers/index.html
@@ -14,11 +14,15 @@
         }
 
         body {
+            background-color: rgba(0, 0, 0, 0);
+            overflow: hidden;
             margin: 0;
             padding: 0;
-            background-color: #2b3990;
-            background-color: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
-            overflow: hidden;
+        }
+
+        body.demo {
+            background: #2b3990;
+            background: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
         }
 
         .marker {
