Demo updates for 0.1.0 release.

--- a/demo/index.html
+++ b/demo/index.html
@@ -90,11 +90,11 @@
         <div class="row h-100 justify-content-center align-items-center">
             <div class="btn-group-vertical" role="group">
                 <a class="btn btn-light  btn-lg" disabled>DEMOS</a>
-                <a class="btn btn-dark btn-lg" href="/heatmap/" target="demo">Heat</a>
-                <a class="btn btn-dark btn-lg" href="/kissingbooth/" target="demo">Kiss</a>
-                <a class="btn btn-dark btn-lg" href="/sequence/" target="demo">Sequence</a>
-                <a class="btn btn-dark btn-lg" href="/baby/" target="demo">Baby</a>
-                <a class="btn btn-dark btn-lg" href="/warp/" target="demo">Warp</a>
+                <a class="btn btn-dark btn-lg" href="/heatmap/?demo=true" target="demo">Heat</a>
+                <a class="btn btn-dark btn-lg" href="/kissingbooth/?demo=true" target="demo">Kiss</a>
+                <a class="btn btn-dark btn-lg" href="/sequence/?demo=true" target="demo">Sequence</a>
+                <a class="btn btn-dark btn-lg" href="/baby/?demo=true" target="demo">Baby</a>
+                <a class="btn btn-dark btn-lg" href="/warp/?demo=true" target="demo">Warp</a>
             </div>
         </div>
     </div>
