--- a/heatmap/index.html
+++ b/heatmap/index.html
@@ -34,8 +34,12 @@
             bottom: 0;
             user-select: none;
 
-            /* background: url('textures/map.svg') no-repeat center center fixed;
-            background-size: cover; */
+
+        }
+
+        #main.demo {
+            background: url('textures/map.svg') no-repeat center center fixed;
+            background-size: cover;
         }
     </style>
 
@@ -82,6 +86,16 @@
 
             let app, sprites;
 
+            // Demo background
+
+            const params = (new URL(document.location)).searchParams;
+            const demo = params.get("demo") || false;
+
+            if (demo) {
+
+                document.getElementById("main").classList.add('demo');
+            }
+
             // Event handlers.
 
             document.addEventListener("click", function (event) {
@@ -119,7 +133,6 @@
                 resolution: devicePixelRatio,
             });
             document.getElementById('main').appendChild(app.view);
-
 
 
             // Gradient texture setup.
